# HyPTCTLChecker

./: HyPTCTLChecker.opam  README.md  dune-project
examples/: README.md
examples/deviation/: clkgen-parametric.hyper-imi  clkgen.hyper-imi  deviation.hyper-imiprop
examples/opacity/: category1_not_vulnerable.hyper-imi  category4_not_vulnerable.hyper-imi  coffee-common.hyper-imi  coffee.hyper-imi  opaque.hyper-imiprop
examples/robust-OND/: ATM-OND.hyper-imiprop  ATM-no-check-OND.hyper-imiprop  ATM-no-check.hyper-imi  ATM.hyper-imi  WFAS_BBLS15-OND.hyper-imiprop  WFAS_BBLS15-instance1.hyper-imi  WFAS_BBLS15-instance2.hyper-imi  WFAS_BBLS15-two_params.hyper-imi  WFAS_BBLS15.hyper-imi  WFAS_BBLS15_det.hyper-imi  coffee-OND.hyper-imiprop  coffee.hyper-imi
examples/scalability/: .gitignore  Makefile  coffee-common-non-parametric.hyper-imi  coffee.hyper-imi  count-sugar-AU.hyper-imiprop  count-sugar-EF.hyper-imiprop  generate-count-sugar-AU.hyper-imiprop.sh  generate-count-sugar-EF.hyper-imiprop.sh
examples/unfairness/: fifo_scheduler-parametric.hyper-imi  (+7 more)
src/lib/: Automaton.mli  Constants.ml  Constants.mli  Counts.ml  Counts.mli  FunctionSig.ml  FunctionSig.mli  ImitatorProperty.ml  ImitatorUtilities.ml  ImitatorUtilities.mli  ImitatorVariableDefinition.ml  ImitatorVariableDefinition.mli  InitState.ml  InitState.mli  LastExpr.ml  LastExpr.mli  LastVars.ml  LastVars.mli  Model.ml  Model.mli  ModelLexer.mll  ModelParser.mly  OCamlUtilities.ml  OCamlUtilities.mli  ParsedValue.ml  ParsedValue.mli  ParsingStructure.mli  PropertyLexer.mll  PropertyParser.mly  dune
